# jasperworld-alpha

./: .gitignore  ARCHITECTURE.md  ASSETS.md  CLAUDE.BAKmd  CLAUDE.md  Cargo.toml  LICENSE  PLAN.BAKmd  README.md  README_SUPPORT.md  debug_start.json  entities_uids.txt  generate_near_masks.py  repack_original.py  repack_raccoon3.py  repack_raccoon4.py  used_entities_uids.txt
assets/configs/: city_bg.json  forest_bg.json  sanctuary_bg.json  sanctuary_cutscene.json  subdivision_bg.json
assets/levels/: compiled_levels.json
assets/models/: cement-platform.glb  large_rock.glb  mountain1.glb  mountain2.glb  redbricks.glb  small_rock.glb  tree_default.glb  tree_fat.glb  tree_oak.glb  tree_pine.glb  yellow_flower.glb
assets/shaders/: alpha_silhouette.wgsl
docs/: README.txt
docs/agents/: jasper_coding_documentation_guardrails.txt
docs/architecture/: jasper_background_parallax_lifecycle_guardrail.txt  jasper_camera_role_identity_guardrail.txt  jasper_camera_world_anchor_guardrail_v2.txt  jasper_layered_z_separation.txt  jasper_numeric_bounds_guardrail.txt  jasper_safe_background_bounds.txt  jasper_traversal_and_camera_guardrails.txt
docs/guardrails/: agent_structure_guardrail.md  jasper_quit_shutdown_guardrail.txt
levels/: jasperworld.ldtk  jasperworld_working.ldtk
src/: constants.rs  lib.rs  main.rs  states.rs  window_geometry.rs
src/animation/: components.rs  mod.rs  systems.rs
src/audio/: components.rs  mod.rs  (+1 more)
tools/: backfill_ldtk.py  generate_entity_icons.py  generate_ldtk_props.py  update_ldtk.py  update_ldtk_props.py  update_ldtk_raccoon.py
(+135 files in other folders)
