[package]
name = "jaspersworld"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["jpeg"] }
avian2d = "0.5"
bevy-tnua = "0.30"
bevy-tnua-avian2d = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
